--- a/templates/login.html
+++ b/templates/login.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
-<link rel="stylesheet" href="static/css/bootstrap.css">
-<link rel="stylesheet" href="static/css/bootstrap.min.css">
+<link rel="stylesheet" href="../static/css/bootstrap.css">
+<link rel="stylesheet" href="../static/css/bootstrap.min.css">
 <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="static/css/selfmd.css">
+<link rel="stylesheet" href="../static/css/selfmd.css">
 <body>
 <div class="bgimage container col-conter">
   <h1 style="text-align: center">Login in</h1>
