--- a/templates/userinterface.html
+++ b/templates/userinterface.html
@@ -34,7 +34,7 @@
               </ul>
             </div>
           </li>
-          <li><img src="static/images/timg.jpg" class="img-responsive img-rounded img-circle"></li>
+          <li><img src="../static/images/timg.jpg" class="img-responsive img-rounded img-circle"></li>
         </div>
       </ul>
     </nav>
