--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
           更新时间2019年4月25日下午4点半
         </p>
         <a class="btn btn-primary btn-large" href="#">Learn more</a>
-        <img src="static/images/background.jpg" class="img-responsive img-rounded"/>
+        <img src="../static/images/background.jpg" class="img-responsive img-rounded"/>
       </div>
     </div>
     <div class="row clearfix">
