--- a/templates/register.html
+++ b/templates/register.html
@@ -29,12 +29,12 @@
 
         <div class="form-group">
           <label class="control-label">Confirm Password</label>
-          <input name="Confirm_password" type="password" class="form-control" required>
+          <input name="Password2" type="password" class="form-control" required>
         </div>
 
         <div class="form-group">
           <label class="control-label">E-mail</label>
-          <input name="Mail" type="text" class="form-control" required>
+          <input name="Email" type="text" class="form-control" required>
         </div>
         <!--
                 <div class="form-group">
