进行了重构 记得保存备份

--- a/static/css/selfmd.css
+++ b/static/css/selfmd.css
@@ -11,3 +11,8 @@
   background-repeat: no-repeat;
   background-size: contain;
 }
+
+.userbgimage{
+  background: url(../images/usb.jpg) no-repeat center fixed;
+  background-size: contain;
+}
