--- a/templates/register.html
+++ b/templates/register.html
@@ -3,16 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Register</title>
-  <link rel="stylesheet" href="../static/css/bootstrap.css">
-  <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="static/css/bootstrap.css">
+  <link rel="stylesheet" href="static/css/bootstrap.min.css">
   <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../static/css/selfmd.css">
+  <link rel="stylesheet" href="static/css/selfmd.css">
 </head>
 <body>
-
-
-<div class="container">
+<div class="container bgimage">
   <div class="row">
     <div class="col-xs-4 col-sm-4 col-md-4 col-conter">
       <h1>Register</h1>
@@ -29,7 +27,7 @@
 
         <div class="form-group">
           <label class="control-label">Confirm Password</label>
-          <input name="Password2" type="password" class="form-control" required>
+          <input name="Confirm_password" type="password" class="form-control" required>
         </div>
 
         <div class="form-group">
