重构结束 记得备份

--- a/templates/homebase.html
+++ b/templates/homebase.html
@@ -37,7 +37,7 @@
             <a role="menuitem"  tabindex="-1" href="#">E-mail:{{Email}}</a>
           </li>
           <li role="presentation">
-            <a role="menuitem"  tabindex="-1" href="userhome">修改个人资料</a>
+            <a role="menuitem"  tabindex="-1" href="edituser">修改个人资料</a>
           </li>
         </ul>
       </div>
