--- a/templates/homebase.html
+++ b/templates/homebase.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="static/css/bootstrap.css">
   <link rel="stylesheet" href="static/css/bootstrap.min.css">
   <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+  <script src="static/js/bootstrap.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="static/css/selfmd.css">
 </head>
@@ -28,8 +29,8 @@
             </div>
           </form>
           <div class="dropdown" style="float: right">
-        <button type="button" class="btn dropdown-toggle" id="UserDropMenu" data-toggle="dropdown">Nmae<span class="glyphicon glyphicon-user caret"></span></button>
-        <ul class="dropdown-menu" role="menu" aria-labelledby="UserDropMenu">
+        <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">Nmae<span class="glyphicon glyphicon-user caret"></span></button>
+        <ul class="dropdown-menu" role="menu">
           <li role="presentation">
             <a role="menuitem"  tabindex="-1" href="#">Nmae:{{Username}}</a>
           </li>
@@ -60,32 +61,70 @@
   </div>
 </div>
 <div class="container">
-  <div class="col-md-4" style="background-color: #1b6d85">
-    <h1>1</h1>
-    <p>
-      wewqwqddqwdsadasd
-      asdas
-      das
-      dasdasdsad
-    </p>
+  <div class="row">
+    <div class="col-md-4" style="background-color: #1b6d85">
+      <h1>1</h1>
+      <p>
+        wewqwqddqwdsadasd
+        asdas
+        das
+        dasdasdsad
+      </p>
+    </div>
+    <div class="col-md-4" style="background-color: rosybrown">
+      <h1>1</h1>
+      <p>
+        wewqwqddqwdsadasd
+        asdas
+        das
+        dasdasdsad
+      </p>
+    </div>
+    <div class="col-md-4" style="background-color: darkkhaki">
+      <h1>1</h1>
+      <p>
+        wewqwqddqwdsadasd
+        asdas
+        das
+        dasdasdsad
+      </p>
+    </div>
   </div>
-  <div class="col-md-4" style="background-color: rosybrown">
-    <h1>1</h1>
-    <p>
-      wewqwqddqwdsadasd
-      asdas
-      das
-      dasdasdsad
-    </p>
-  </div>
-  <div class="col-md-4" style="background-color: darkkhaki">
-    <h1>1</h1>
-    <p>
-      wewqwqddqwdsadasd
-      asdas
-      das
-      dasdasdsad
-    </p>
+  <div class="row">
+    <div class="col-md-2">
+      <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#PutArticle">发表文章</button>
+      <div class="modal fade" id="PutArticle" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+              <h3 class="modal-title">发表博文</h3>
+            </div>
+            <div class="modal-body">
+              <form role="form" class="form-horizontal">
+                <div class="form-group">
+                  <select class="form-control">
+                    <option>选择主题分类</option>
+                    <option>A</option>
+                    <option>B</option>
+                    <option>C</option>
+                  </select>
+                  <input type="text" class="form-control" placeholder="标题">
+                </div>
+                <div class="form-group">
+                  <textarea class="form-control" rows="10"></textarea>
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+              <button type="submit" class="btn btn-primary" data-dismiss="modal">发表</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 </body>
+</html>
