--- a/templates/register.html
+++ b/templates/register.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Register</title>
-  <link rel="stylesheet" href="static/css/bootstrap.css">
-  <link rel="stylesheet" href="static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../static/css/bootstrap.css">
+  <link rel="stylesheet" href="../static/css/bootstrap.min.css">
   <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="static/css/selfmd.css">
+  <link rel="stylesheet" href="../static/css/selfmd.css">
 </head>
 <body>
 <div class="container bgimage">
@@ -27,7 +27,7 @@
 
         <div class="form-group">
           <label class="control-label">Confirm Password</label>
-          <input name="Confirm_password" type="password" class="form-control" required>
+          <input name="Password2" type="password" class="form-control" required>
         </div>
 
         <div class="form-group">
