--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{%block title}个人博客{%endblock}</title><!--子类可以替换改标题-->
-  <link rel="stylesheet" href="static/css/bootstrap.css">
-  <link rel="stylesheet" href="static/css/bootstrap.min.css">
+  <title>{% block title %}个人博客{% endblock %}</title><!--子类可以替换改标题-->
+  <link rel="stylesheet" href="../static/css/bootstrap.css">
+  <link rel="stylesheet" href="../static/css/bootstrap.min.css">
   <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="static/css/selfmd.css">
+  <link rel="stylesheet" href="../static/css/selfmd.css">
 </head>
 <body>
 <div class="container">
@@ -48,7 +48,7 @@
       </p>
       <a class="btn btn-primary btn-large" href="#">Learn more</a>
       {% endblock %}
-      <img src="static/images/background.jpg" class="img-responsive img-rounded"/>
+      <img src="../static/images/background.jpg" class="img-responsive img-rounded"/>
     </div>
   </div>
   <div class="row clearfix">
