--- a/templates/homebase.html
+++ b/templates/homebase.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>{%block title}个人博客{%endblock}</title><!--子类可以替换改标题-->
-  <link rel="stylesheet" href="static/css/bootstrap.css">
-  <link rel="stylesheet" href="static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../static/css/bootstrap.css">
+  <link rel="stylesheet" href="../static/css/bootstrap.min.css">
   <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-  <script src="static/js/bootstrap.js"></script>
+  <script src="../static/js/bootstrap.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="static/css/selfmd.css">
+  <link rel="stylesheet" href="../static/css/selfmd.css">
 </head>
 <body>
 <div class="container  userbgimage">
@@ -48,7 +48,7 @@
 
   <div class="row">
    <div class="col-md-1">
-     <img src="static/images/timg.jpg" class="img-circle img-responsive">
+     <img src="../static/images/timg.jpg" class="img-circle img-responsive">
   </div>
     <div class="col-md-4" style="float: left">
       <label>{{Username}}</label>
