--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 {% else %}
   {% block LsAndUser %}
       <div class="dropdown" style="float: right">
-        <img src="static/images/timg.jpg" class="img-responsive img-rounded img-circle">
+        <img src="../static/images/timg.jpg" class="img-responsive img-rounded img-circle">
         <button type="button" class="btn dropdown-toggle" id="UserDropMenu" data-toggle="dropdown">Nmae<span class="glyphicon glyphicon-user caret"></span></button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="UserDropMenu">
           <li role="presentation">
