--- a/templates/learn.html
+++ b/templates/learn.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <meta charset="UTF-8">
 <title>Title</title>
-<link rel="stylesheet" href="static/css/bootstrap.css">
+<link rel="stylesheet" href="../static/css/bootstrap.css">
 <body>
 <div class="container">
   <div class="row clearfix">
