--- a/templates/login.html
+++ b/templates/login.html
@@ -3,32 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-  <link rel="stylesheet" href="static/css/bootstrap.css">
-  <link rel="stylesheet" href="static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../static/css/bootstrap.css">
+  <link rel="stylesheet" href="../static/css/bootstrap.min.css">
   <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="static/css/selfmd.css">
+  <link rel="stylesheet" href="../static/css/selfmd.css">
 </head>
-<body style="background-color: #2aabd2">
-<div class="bgimage container col-conter">
-  <h1 style="text-align: center">Login in</h1>
+<body>
+<div class="bgimage container ">
   <div class="col-xs-4 col-sm-4 col-md-4 col-conter">
-  <form role="form" class="form-horizontal center-block" method="post">
-    <div class="form-group">
-        <label>Name</label>
-        <input type="text" name="Username" class="form-control" required autofocus>
-    </div>
-    <div class="form-group">
-        <label>Password</label>
-        <input type="password" name="Password" class="form-control" required>
-    </div>
-    <div class="form-group">
-      <label>
-        <input type="submit" class="form-control btn btn-info" value="Login in">
-      </label>
-    </div>
-  </form>
-</div>
+    <h1>Login in</h1>
+    <form role="form" class="form-horizontal center-block" method="post">
+      <div class="form-group">
+          <label>Name</label>
+          <input type="text" name="Username" class="form-control" required autofocus>
+      </div>
+      <div class="form-group">
+          <label>Password</label>
+          <input type="password" name="Password" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label>
+          <input type="submit" class="form-control btn btn-info" value="Login in">
+        </label>
+      </div>
+    </form>
+  </div>
 </div>
 </body>
 </html>
