--- a/templates/homebase.html
+++ b/templates/homebase.html
@@ -40,6 +40,9 @@
           <li role="presentation">
             <a role="menuitem"  tabindex="-1" href="edituser">修改个人资料</a>
           </li>
+            <li role="presentation">
+                <a role="menuitem"  tabindex="-1" href="modpasswd">修改密码</a>
+            </li>
         </ul>
       </div>
         </div>
