--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../static/css/bootstrap.css">
     <meta charset="utf-8">
     <title>Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -55,6 +56,11 @@
 <body>
     <h1>Page Not Found</h1>
     <p>Sorry, but the page you were trying to view does not exist.</p>
+    <footer class="footer navbar-fixed-bottom ">
+        <div class="container">
+            <a href="index" class="btn btn-lg">返回首页</a>
+        </div>
+    </footer>
 </body>
 </html>
 <!-- IE needs 512+ bytes: https://blogs.msdn.microsoft.com/ieinternals/2010/08/18/friendly-http-error-pages/ -->
