--- a/templates/404.html
+++ b/templates/404.html
@@ -54,8 +54,8 @@
     </style>
 </head>
 <body>
-    <h1>Page Not Found</h1>
-    <p>Sorry, but the page you were trying to view does not exist.</p>
+    <h1>无法找到页面</h1>
+    <p>对不起，您所要访问的页面不存在</p>
     <footer class="footer navbar-fixed-bottom ">
         <div class="container">
             <a href="index" class="btn btn-lg">返回首页</a>
