--- a/templates/homebase.html
+++ b/templates/homebase.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{%block title}个人博客{%endblock}</title><!--子类可以替换改标题-->
+  <title>{% block title %}个人博客{% endblock %}</title><!--子类可以替换改标题-->
   <link rel="stylesheet" href="../static/css/bootstrap.css">
   <link rel="stylesheet" href="../static/css/bootstrap.min.css">
   <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
