--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,9 @@
           <li role="presentation">
             <a role="menuitem"  tabindex="-1" href="userhome">进入个人空间</a>
           </li>
+          <li role="presentation">
+            <a role="menuitem"  tabindex="-1" href="modpasswd">修改密码</a>
+          </li>
         </ul>
       </div>
   {% endblock %}
