--- a/templates/modpasswd.html
+++ b/templates/modpasswd.html
@@ -34,8 +34,8 @@
           <input type="password" name="Password2" class="form-control" required>
         </div>
         <div class="form-group">
-          <label>E-mail</label>
-          <input type="text" name="Email" class="form-control" placeholder="验证邮箱，系统会发送一封邮件确认修改密码生效" required>
+          <label>用户名</label>
+          <input type="text" name="Username" class="form-control" required>
         </div>
         <!--
         <div class="form-group">
