--- a/templates/modpasswd.html
+++ b/templates/modpasswd.html
@@ -22,8 +22,12 @@
     <div class="col-md-4 col-conter">
       <form role="form">
         <div class="form-group">
+          <label>用户名</label>
+          <input type="text" name="Username" class="form-control" required>
+        </div>
+        <div class="form-group">
           <label>旧密码</label>
-          <input type="password" name="PastPassword" class="form-control" required>
+          <input type="password" name="OldPassword" class="form-control" required>
         </div>
         <div class="form-group">
           <label>新密码</label>
@@ -31,12 +35,9 @@
         </div>
         <div class="form-group">
           <label>确认新密码</label>
-          <input type="password" name="Password2" class="form-control" required>
+          <input type="password" name="NewPassword2" class="form-control" required>
         </div>
-        <div class="form-group">
-          <label>用户名</label>
-          <input type="text" name="Username" class="form-control" required>
-        </div>
+
         <!--
         <div class="form-group">
           <label>验证码</label>
