--- a/templates/modpasswd.html
+++ b/templates/modpasswd.html
@@ -20,7 +20,7 @@
       <h1>修改密码</h1>
     </div>
     <div class="col-md-4 col-conter">
-      <form role="form">
+      <form role="form" method="post">
         <div class="form-group">
           <label>用户名</label>
           <input type="text" name="Username" class="form-control" required>
