--- a/templates/homebase.html
+++ b/templates/homebase.html
@@ -38,7 +38,7 @@
             <a role="menuitem"  tabindex="-1" href="#">E-mail:{{Email}}</a>
           </li>
           <li role="presentation">
-            <a role="menuitem"  tabindex="-1" href="edituser">修改个人资料</a>
+            <a role="menuitem"  tabindex="-1" href="profile">修改个人资料</a>
           </li>
             <li role="presentation">
                 <a role="menuitem"  tabindex="-1" href="modpasswd">修改密码</a>
