--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,13 +17,8 @@
         <h1>个人资料更改</h1>
         <form role="form" class="form-horizontal" method="post">
           <div class="form-group">
-            <label class="control-label">Name</label>
-            <input name="Username" type="text" class="form-control" value={{Username}} required>
-          </div>
-
-          <div class="form-group">
-            <label class="control-label">E-mail</label>
-            <input name="Email" type="text" class="form-control" value={{Emai}} required>
+            <label class="control-label">别名</label>
+            <input name="NickName" type="text" class="form-control" value={{Emai}} required>
           </div>
           <input type="submit" class="form-control" value="保存更改">
           <input type="submit" class="form-control" value="取消">
