--- a/static/css/selfmd.css
+++ b/static/css/selfmd.css
@@ -16,3 +16,23 @@
   background: url(../images/usb.jpg) no-repeat center fixed;
   background-size: contain;
 }
+
+.index_bg{
+  background-image: url("../images/home_img.jpg");
+  background-repeat: no-repeat;
+  background-size: auto 500px;
+  width: 100%;
+  height: 500px;
+}
+.index_img{
+  width: 100%;
+  height: 500px;
+}
+.last_img{
+  background: url(../images/classic-pattern-bg.png) repeat center fixed;
+}
+
+a{
+  color: saddlebrown;
+}
+
