--- a/templates/base.html
+++ b/templates/base.html
@@ -1,64 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>{% block title %}个人博客{% endblock %}</title><!--子类可以替换改标题-->
   <link rel="stylesheet" href="../static/css/bootstrap.css">
-  <link rel="stylesheet" href="../static/css/bootstrap.min.css">
   <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="../static/js/bootstrap.js"></script>
   <link rel="stylesheet" href="../static/css/selfmd.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{% block title %}Blog{% endblock %}</title>
 </head>
 <body>
-<div class="container">
-  <div class="row clearfix">
-    <div class="col-md-12 column">
-      <nav class="navbar navbar-inverse" role="navigation">
-        <div class="navbar-header"><a class="navbar-brand" href="index">Blog</a></div>
-        <div>
-          <ul class="nav navbar-nav">
-            <li><a href="#">A</a></li>
-            <li><a href="#">B</a></li>
-            <li><a href="#">C</a></li>
-          </ul>
-          <form role="search" class="navbar-form navbar-left">
-            <div class="form-group">
-              <input type="text" class="form-control">
-              <input type="submit" class="form-control" value="Search">
-            </div>
-          </form>
+<nav role="navigation" class="navbar navbar-default navbar-fixed-top" style="padding: 0;margin: 0;">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#home_nav">
+      <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+    </button>
+    <a href="#" class="navbar-brand">Blog</a>
+  </div>
+  <div class="navbar-collapse collapse clearfix" id="home_nav">
+    <ul class="nav nav-pills navbar-left">
+      <li><a href="#" class="btn btn-lg">Home</a></li>
+      <li><a href="#" class="btn btn-lg" style="float:left;margin-left: 80px">Contact</a></li>
+    </ul>
+    <form role="search" class="navbar-form navbar-left" method="get">
+      <div class="form-group">
+        <input type="text" class="form-control">
+      </div>
+      <button type="submit" class="btn btn-default">Search</button>
+    </form>
+    <ul class="nav nav-pills navbar-right">
+      <li><a href="#" class="btn btn-lg" style="float:right;margin-right: 80px">Login</a></li>
+      <li><a href="#" class="btn btn-lg" style="float:right;margin-right: 80px">Register</a></li>
+    </ul>
+  </div>
+</nav>
 
-          {% block LsAndUser %}
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="login" title="if you have not had a account,you can not use it"><button type="button" class="btn btn-default">Login in</button></a></li>
-            <li><a href="register" title="click it and creat a new account"><button type="button" class="btn btn-default">Sign up</button></a></li>
-          </ul>
-          {% endblock %}
-        </div>
-      </nav>
-    </div>
-    <div class="jumbotron">
-      {% block IndexAdmin %}
-      <h1>最新博客个人博客</h1>
-      <p>
-        {{LatestBlogMin}}
-      </p>
-      <p>
-        {{LatestBlogTime}}
-      </p>
-      <a class="btn btn-primary btn-large" href="#">Learn more</a>
-      {% endblock %}
-      <img src="../static/images/background.jpg" class="img-responsive img-rounded"/>
+<div class="index_bg">
+<img src="../static/images/home_img.jpg" class="index_img">
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2 style="text-align: center;color: saddlebrown">Introduction</h2>
+      <p class="text-muted " style="text-align: center">Suspendisse ut magna vel velit cursus tempor ut nec nunc. Mauris vehicula, augue in tincidunt porta, purus ipsum blandit massa.</p>
+      <p class="text-muted " style="text-align: center"> nec nunc. Mauris vehicula, augue in tincidunt porta, purus ipsum blandit massa.</p>
+      <p class="text-muted " style="text-align: center">augue in tincidunt porta, purus ipsum blandit massa.</p>
     </div>
   </div>
-  <div class="row clearfix">
+  <div class="row">
+    <div class="col-md-3">
+      <img src="../static/images/tm-img-310x180-1.jpg" class="img-responsive img-rounded">
+      <h3 style="color: saddlebrown">Die or Live</h3>
+      <p>Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra</p>
+      <button class="btn btn-primary" style="color: sandybrown;background-color: #0f0f0f">Read More</button>
+    </div>
+    <div class="col-md-3">
+      <img src="../static/images/tm-img-310x180-2.jpg" class="img-responsive img-rounded">
+      <h3 style="color: saddlebrown">Die or Live</h3>
+      <p>Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra</p>
+      <button class="btn btn-primary" style="color: sandybrown;background-color: #0f0f0f">Read More</button>
+    </div>
+    <div class="col-md-3">
+      <img src="../static/images/tm-img-310x180-3.jpg" class="img-responsive img-rounded">
+      <h3 style="color: saddlebrown">Die or Live</h3>
+      <p>Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra</p>
+      <button class="btn btn-primary" style="color: sandybrown;background-color: #0f0f0f">Read More</button>
+    </div>
+    <div class="col-md-3">
+      <img src="../static/images/tm-img-310x180-4.jpg" class="img-responsive img-rounded">
+      <h3 style="color: saddlebrown">Die or Live</h3>
+      <p>Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra</p>
+      <button class="btn btn-primary" style="color: sandybrown;background-color: #0f0f0f">Read More</button>
+    </div>
+  </div>
+  <div class="row">
     <div class="col-md-6">
-      <h1>The First</h1>
-      <p>1111</p>
+      <h3 style="color: saddlebrown">The Best Article</h3>
+      <em class="text-muted ">outline:what does a person do</em>
+      <img src="../static/images/tm-img-660x330-1.jpg" class="img-responsive img-rounded">
+      <p class="text-muted ">
+        Donec tempor lobortis tortor, in feugiat massa facilisis sed. Ut dignissim viverra pretium. In eu justo maximus turpis feugiat finibus scelerisque nec eros. Cras nec lectus tempor nibh vestibulum eleifend et ac elit.
+
+        Morbi vel pharetra massa, non iaculis tortor. Nulla porttitor tincidunt felis et feugiat. Vivamus fermentum ligula justo, sit amet blandit nisl volutpat id. Fusce sagittis ultricies felis, non luctus mauris lacinia quis.
+
+        Ut fringilla lacus ac tempor ullamcorper. Mauris iaculis placerat ex et mattis. Mauris id vulputate lectus, id fermentum sapien.
+      </p>
+      <button class="btn btn-lg" style="background-color:sandybrown;">Read More</button>
     </div>
     <div class="col-md-6">
-      <h1>The Second</h1>
-      <p>2222</p>
+      <table class="table">
+        <caption style="color: saddlebrown">The Latest Article</caption>
+        <tbody>
+        <tr>
+          <td>
+            <img src="../static/images/tm-img-240x120-1.jpg" class="img-responsive img-rounded">
+          </td>
+          <td>
+            <h4 style="color: saddlebrown"> Sport is life</h4>
+            <a href="#" class="text-muted">
+              Aenean cursus tellus mauris,
+            </a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="../static/images/tm-img-240x120-2.jpg" class="img-responsive img-rounded">
+          </td>
+          <td>
+            <h4 style="color: saddlebrown"> Sport is life</h4>
+            <a href="#" class="text-muted">
+              Aenean cursus tellus mauris,
+            </a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="../static/images/tm-img-240x120-3.jpg" class="img-responsive img-rounded">
+          </td>
+          <td>
+            <h4 style="color: saddlebrown"> Sport is life</h4>
+            <a href="#" class="text-muted">
+              Aenean cursus tellus mauris,
+            </a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <h4 style="color: saddlebrown">Advertisement</h4>
+            <ul class="list-unstyled">
+              <li><a href="#">SWITH of Work</a></li>
+              <li><a href="#">Kingdom</a></li>
+              <li><a href="#">Tinkg Talk</a></li>
+            </ul>
+          </td>
+          <td>
+            <h4 style="color: saddlebrown">Useful Link</h4>
+            <ul class="list-unstyled">
+              <li><a href="#">SWITH of Work</a></li>
+              <li><a href="#">Kingdom</a></li>
+              <li><a href="#">Tinkg Talk</a></li>
+            </ul>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+</div>
+
+<div class="last_img">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <table class="table">
+          <tr>
+            <td style="color: saddlebrown">NextTime</td>
+            <td style="color: saddlebrown">NextTime</td>
+            <td style="color: saddlebrown">NextTime</td>
+            <td style="color: saddlebrown">NextTime</td>
+          </tr>
+          <tr>
+            <td>
+              Lorem ipsum dolor
+              Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra.
+            </td>
+            <td>
+              Lorem ipsum dolor
+              Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra.
+            </td>
+            <td>
+              Lorem ipsum dolor
+              Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra.
+            </td>
+            <td>
+              Lorem ipsum dolor
+              Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra.
+            </td>
+          </tr>
+        </table>
+        <footer>
+          <p>
+            2019 Watermelon And LMP.<address>
+          <a href="">@163</a>
+        </address>
+          </p>
+        </footer>
+      </div>
     </div>
   </div>
 </div>
