--- a/templates/homebase.html
+++ b/templates/homebase.html
@@ -32,6 +32,7 @@
         <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">Nmae<span class="glyphicon glyphicon-user caret"></span></button>
         <ul class="dropdown-menu" role="menu">
           <li role="presentation">
+              {% if NickName.
             <a role="menuitem"  tabindex="-1" href="#">Nmae:{{Username}}</a>
           </li>
           <li role="presentation">
@@ -55,7 +56,7 @@
   </div>
     <div class="col-md-4" style="float: left">
       <label>{{Username}}</label>
-      {% if massgae == 0 %}
+      {% if {{massgae}} == 0 %}
         <input class="form-control" style="BACKGROUND-COLOR: transparent;"placeholder="编辑个性签名">
       {% else %}
         <input class="form-control" style="BACKGROUND-COLOR: transparent;"value={{massage}}>
