--- a/templates/base.html
+++ b/templates/base.html
@@ -29,23 +29,24 @@
       <button type="submit" class="btn btn-default">Search</button>
     </form>
     <ul class="nav nav-pills navbar-right">
-      <li><a href="#" class="btn btn-lg" style="float:right;margin-right: 80px">Login</a></li>
+      <li><a href="login.html" class="btn btn-lg" style="float:right;margin-right: 80px">Login</a></li>
       <li><a href="#" class="btn btn-lg" style="float:right;margin-right: 80px">Register</a></li>
     </ul>
   </div>
 </nav>
 
-<div class="index_bg">
+<div>
 <img src="../static/images/home_img.jpg" class="index_img">
 </div>
 
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h2 style="text-align: center;color: saddlebrown">Introduction</h2>
-      <p class="text-muted " style="text-align: center">Suspendisse ut magna vel velit cursus tempor ut nec nunc. Mauris vehicula, augue in tincidunt porta, purus ipsum blandit massa.</p>
-      <p class="text-muted " style="text-align: center"> nec nunc. Mauris vehicula, augue in tincidunt porta, purus ipsum blandit massa.</p>
-      <p class="text-muted " style="text-align: center">augue in tincidunt porta, purus ipsum blandit massa.</p>
+      <h2 style="text-align: center;color: saddlebrown">For you</h2>
+      <p class="text-muted " style="text-align: center">Give me the strength to raise my mind high above daily trifles.</p>
+      <p class="text-muted " style="text-align: center">Give me the strength lightly to bear my joys and sorrows.</p>
+      <p class="text-muted " style="text-align: center">Give me the strength to make my love fruitful in service.</p>
+      <p class="text-muted " style="text-align: center">One word then, one smile, is enough.</p>
     </div>
   </div>
   <div class="row">
