--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
 <div class="bgimage container ">
   <div class="col-xs-4 col-sm-4 col-md-4 col-conter">
     <h1>Login in</h1>
-    <form role="form" class="form-horizontal center-block" method="post">
+    <form action="base.html" role="form" class="form-horizontal center-block" method="post">
       <div class="form-group">
           <label>Name</label>
           <input type="text" name="Username" class="form-control" required autofocus>
