--- a/static/css/selfmd.css
+++ b/static/css/selfmd.css
@@ -17,13 +17,6 @@
   background-size: contain;
 }
 
-.index_bg{
-  background-image: url("../images/home_img.jpg");
-  background-repeat: no-repeat;
-  background-size: auto 500px;
-  width: 100%;
-  height: 500px;
-}
 .index_img{
   width: 100%;
   height: 500px;
@@ -36,3 +29,7 @@ a{
   color: saddlebrown;
 }
 
+.blog_img{
+  width: 100%;
+  height: 300px;
+}
