--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,8 @@
       <button type="submit" class="btn btn-default">Search</button>
     </form>
     <ul class="nav nav-pills navbar-right">
-      <li><a href="login.html" class="btn btn-lg" style="float:right;margin-right: 80px">Login</a></li>
-      <li><a href="#" class="btn btn-lg" style="float:right;margin-right: 80px">Register</a></li>
+      <li><a href="login" class="btn btn-lg" style="float:right;margin-right: 80px">Login</a></li>
+      <li><a href="register" class="btn btn-lg" style="float:right;margin-right: 80px">Register</a></li>
     </ul>
   </div>
 </nav>
