--- a/templates/fabiaowenzhang.html
+++ b/templates/fabiaowenzhang.html
@@ -16,16 +16,10 @@
 <div class="col-md-6">
     <form role="form" class="form-horizontal" method="post">
         <div class="form-group">
-            <select class="form-control">
-                <option>选择主题分类</option>
-                <option>A</option>
-                <option>B</option>
-                <option>C</option>
-            </select>
             <input type="text" class="form-control" placeholder="标题">
         </div>
         <div class="form-group">
-            <textarea class="form-control" rows="10"></textarea>
+            <textarea class="form-control" name="Articles"rows="10"></textarea>
         </div>
         <button type="submit" class="btn btn-primary" >发表</button>
     </form>
