--- a/templates/fabiaowenzhang.html
+++ b/templates/fabiaowenzhang.html
@@ -16,6 +16,7 @@
 <div class="col-md-6">
     <form role="form" class="form-horizontal" method="post">
         <div class="form-group">
+            <input type="text" class="form-control" name="Username" placeholder="y用户名">
             <input type="text" class="form-control" placeholder="标题">
         </div>
         <div class="form-group">
