--- a/templates/fabiaowenzhang.html
+++ b/templates/fabiaowenzhang.html
@@ -17,7 +17,7 @@
     <form role="form" class="form-horizontal" method="post">
         <div class="form-group">
             <input type="text" class="form-control" name="Username" placeholder="y用户名">
-            <input type="text" class="form-control" placeholder="标题">
+            <input type="text" class="form-control" name="Title" placeholder="标题">
         </div>
         <div class="form-group">
             <textarea class="form-control" name="Articles"rows="10"></textarea>
