--- a/templates/homebase.html
+++ b/templates/homebase.html
@@ -69,9 +69,10 @@
         </ul>
       </nav>
     </div>
+    <hr>
   </div>
   <div class="row">
-    <div class="col-md-6 column">
+    <div class="col-md-7">
       <div class="panel-group" id="panel-182938">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -82,14 +83,36 @@
               Anim pariatur cliche...
             </div>
           </div>
+          <div class="panel-heading">
+            <a class="panel-title" data-toggle="collapse" data-parent="#panel-182938" href="#panel-element-55500">Collapsible Group Item #1</a>
+          </div>
+          <div id="panel-element-55500" class="panel-collapse collapse in">
+            <div class="panel-body">
+              Anim pariatur cliche...
+            </div>
+          </div>
         </div>
         </div>
       </div>
-    </div>
-    <div class="col-md-6">
+    <div class="col-md-5">
+      <img src="../static/images/banner.png" class="img-responsive">
+        <p class="avatar">
+          <img src="../static/images/timg.jpg">
+        </p>
+      <p>
+        {{Username}}
+      </p>
+      <p>
+        Give me the strength to raise my mind high above daily trifles.
 
+        Give me the strength lightly to bear my joys and sorrows.
+
+        Give me the strength to make my love fruitful in service.
+
+        One word then, one smile, is enough.
+      </p>
     </div>
   </div>
-
+</div>
 </body>
 </html>
