--- a/static/css/selfmd.css
+++ b/static/css/selfmd.css
@@ -33,3 +33,6 @@ a{
   width: 100%;
   height: 200px;
 }
+
+.avatar { margin: 40px auto 20px; width: 100px }
+.avatar img { width: 100px; border-radius: 50% }
