--- a/templates/homebase.html
+++ b/templates/homebase.html
@@ -93,6 +93,7 @@
           </div>
         </div>
         </div>
+      <a class="btn btn-info" href="fabiaowenzhang">发表文章</a>
       </div>
     <div class="col-md-5">
       <img src="../static/images/banner.png" class="img-responsive">
